Fixing What I'm Doing spacing

--- a/css/monica-lin.css
+++ b/css/monica-lin.css
@@ -2564,7 +2564,7 @@
 }
 
 .loves {
-  height: 532px;
+  height: 528px;
   margin-top: 60px;
   margin-bottom: 60px;
   background-color: #f6f8f9;
